Add type and code to ApiErrorResponse (#77)
