# api/app/responses/api_error_response.rb
@@ -1,9 +1,13 @@
 class ApiErrorResponse
-  def self.body(message:, errors:, status:)
+  def self.body(message:, errors:, status:, type:, code:)
     {
       status: {
         code: Rack::Utils::SYMBOL_TO_STATUS_CODE[status],
         message: message
+      },
+      error: {
+        type: type,
+        code: code
       },
       errors: errors
     }
@@ -13,12 +17,15 @@ class ApiErrorResponse
   #
   # Refer to `app/failures` to see `ApiErrorResponse.authentication(...) usage.
   def self.authentication(
-    field: "Authentication",
+    code: ErrorCodeGenerator.authentication_required,
+    field: "authentication",
     message: "You need to sign in before continuing"
   )
     body(
-      message: "Unauthorized",
+      message: "unauthorized",
       status: :unauthorized,
+      type: ErrorTypeGenerator.authentication_error,
+      code: code,
       errors: [
         {
           field: field,
