# api/app/responses/error_type_generator.rb
@@ -1,0 +1,13 @@
+class ErrorTypeGenerator
+  def self.authentication_error
+    "authentication_error"
+  end
+
+  def self.validation_error
+    "validation_error"
+  end
+
+  def self.not_found_error
+    "not_found_error"
+  end
+end
